--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "activity-frontend",
-  "homepage": "https://ruthjoy76.github.io/phonebook-app/",
+  "homepage": "https://ruthjoy76.github.io/HRMS-client/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
